# yahtzee_backend

./: .gitignore  Dockerfile  README.md  config.yaml  requirements.txt  setup.cfg
src/app/: main.py
src/app/engine/: entities.py  event_broker.py  game_engine.py  state_manager.py
src/app/entities/: events.py  gameplay.py  transcripts.py
src/app/events/: event.py  event_broker.py
src/app/state/: game_state.py  state_manager.py
src/app/state/chat/: chat.py  chat_history.py  chat_message.py
src/app/state/transcript/: game_event.py  game_transcript.py
src/app/state/transcripts/: message.py  transcript.py
src/app/state/yahtzee/: player.py
src/app/util/: config.py
src/app/yahtzee/events/: event.py  event_broker.py
src/tests/engine/: test_entities.py  test_game_engine.py
src/tests/events/: test_event.py  test_event_broker.py
src/tests/state/: test_state_manager.py
src/tests/state/transcripts/: test_message.py  test_transcript.py
src/tests/state/yahtzee/: test_player.py
