[metadata]
name = yahtzee-backend
version = 0.0.1
author = Team Binary Bits
author_email = author@example.com
description = Yahtzee Backend (Server)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jhu-binary-bits/yahtzee_backend
project_urls =
    Bug Tracker = https://github.com/jhu-binary-bits/yahtzee_backend/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/app
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml==5.4.1
    websockets==9.1
    pytz==2021.1

[options.packages.find]
where = src/app

[options.entry_points]
console_scripts =
    yahtzee_backend = main:start_backend